--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,28 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>E-ASP</groupId>
   <artifactId>E-ASP</artifactId>
+  
   <version>Version-1.0</version>
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   	<javafx.version>18.0.2</javafx.version>
   	<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
   </properties>
+  
   <dependencies>
+  
   	<dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>${javafx.version}</version>
     </dependency>
+    
     <dependency>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-fxml</artifactId>
-    <version>${javafx.version}</version>
-</dependency>
+    	<groupId>org.openjfx</groupId>
+    	<artifactId>javafx-fxml</artifactId>
+    	<version>${javafx.version}</version>
+    
+  	</dependency>
     
   	<dependency>
     	<groupId>org.fxmisc.richtext</groupId>
@@ -38,15 +44,19 @@
 	</dependency>
 
   </dependencies>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
+    
     <resources>
+    
       <resource>
         <directory>src</directory>
         <excludes>
           <exclude>**/*.java</exclude>
         </excludes>
       </resource>
+      
     </resources>
     
     <plugins>
@@ -66,6 +76,7 @@
           <release>18</release>
         </configuration>
       </plugin>
+      
     </plugins>
   </build>
 </project>
