--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "helper": "helper/helper.lp",
   "theme": "light",
-  "solver": "/opt/homebrew/Cellar/clingo/5.6.2/bin/clingo"
+  "solver": "/Users/marco/opt/miniconda3/envs/potassco/bin/clingo"
 }
