--- a/pom.xml
+++ b/pom.xml
@@ -1,82 +1,135 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>E-ASP</groupId>
-  <artifactId>E-ASP</artifactId>
-  
-  <version>Version-1.0</version>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  	<javafx.version>18.0.2</javafx.version>
-  	<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
-  </properties>
-  
-  <dependencies>
-  
-  	<dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-controls</artifactId>
-      <version>${javafx.version}</version>
-    </dependency>
-    
-    <dependency>
-    	<groupId>org.openjfx</groupId>
-    	<artifactId>javafx-fxml</artifactId>
-    	<version>${javafx.version}</version>
-    
-  	</dependency>
-    
-  	<dependency>
-    	<groupId>org.fxmisc.richtext</groupId>
-    	<artifactId>richtextfx</artifactId>
-    	<version>0.10.3</version>
-	</dependency>
-	
-	<dependency>
-    	<groupId>de.jensd</groupId>
-    	<artifactId>fontawesomefx</artifactId>
-    	<version>8.9</version>
-	</dependency>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>E-ASP</groupId>
+    <artifactId>E-ASP</artifactId>
 
-	<dependency>
-    	<groupId>org.json</groupId>
-    	<artifactId>json</artifactId>
-    	<version>20190722</version>
-	</dependency>
+    <version>Version-1.0</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.version>21</javafx.version>
+        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+    </properties>
 
-  </dependencies>
-  
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    
-    <resources>
-    
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-      
-    </resources>
-    
-    <plugins>
-	    <plugin>
-	        <groupId>org.openjfx</groupId>
-	        <artifactId>javafx-maven-plugin</artifactId>
-	        <version>${javafx.maven.plugin.version}</version>
-	        <configuration>
-	          <mainClass>application.Main</mainClass>
-	        </configuration>
-	      </plugin>
-    
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>18</release>
-        </configuration>
-      </plugin>
-      
-    </plugins>
-  </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-materialdesign2-pack</artifactId>
+            <version>12.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-javafx</artifactId>
+            <version>12.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+
+        </dependency>
+
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.10.3</version>
+        </dependency>
+		
+		<dependency>
+			<groupId>org.antlr</groupId>
+   		 	<artifactId>antlr4</artifactId>
+    		<version>4.13.1</version>
+    	</dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+
+        <resources>
+
+            <resource>
+                <directory>src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+
+        </resources>
+
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx.maven.plugin.version}</version>
+                <configuration>
+                    <mainClass>application.Main</mainClass>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>18</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.6.7</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>spring-boot</classifier>
+                            <mainClass>
+                                application.MyMain
+                            </mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+        		<groupId>org.antlr</groupId>
+        		<artifactId>antlr4-maven-plugin</artifactId>
+        		<version>4.13.1</version>
+		        <executions>
+		          <execution>
+		            <id>antlr</id>
+		            <goals>
+		              <goal>antlr4</goal>
+		            </goals>
+		            <phase>generate-sources</phase>
+		            <configuration>
+		            	<arguments>
+			            	<argument>-package</argument>
+	        				<argument>application.antlr4.generated</argument>
+		            	</arguments>
+		            	<outputDirectory>src/application/antlr4/generated</outputDirectory>
+						<visitor>true</visitor>
+                        <sourceDirectory>src/application/antlr4/</sourceDirectory>
+                    </configuration>
+                    
+		          </execution>
+		        </executions>
+      		</plugin>
+        </plugins>
+    </build>
 </project>
